# Snake

./: CMakeLists.txt  LICENSE  README.md
CMake/: FindGLM.cmake
src/: Error.cpp  Error.hpp  Food.cpp  Food.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Segment.cpp  Segment.hpp  main.cpp
